# modern-python-project-setup

./: LICENSE  README.md  pyproject.toml
src/modern_python_project_setup/: __init__.py  console.py
