[tool.poetry]
name = "modern-python-project-setup"
version = "0.1.0"
description = "Template project for a modern python project."
authors = ["Dion Kllokoqi <dion.kllokoqi@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
requests = "^2.31.0"

[tool.poetry.scripts]
modern-python-project-setup = "modern_python_project_setup.console:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
